PostGIS 2.2.8
2018/MM/DD

 * Bug Fixes *
   - #2985, Avoid array overflow in ANALYZE (Paul Ramsey)
   - #4160, Use qualified names in topology extension install (Raúl Marín)
   - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
   - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
   - #4020, Fix leftovers in topology upgrade from 2.1 (Sandro Santilli)
   - #4203, Fix build with GNU Make 4.1 (Sandro Santilli)
   - #4206, Fix support for PostgreSQL 12 dev branch (Laurenz Albe)
   - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
   - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
   - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)


PostGIS 2.2.7
2018/04/06

 * Bug Fixes *
  - #3055, [raster] ST_Clip() on a raster without band crashes the server
          (Regina Obe)
  - #3965, ST_ClusterKMeans used to lose some clusters on initialization
           (Darafei Praliaskouski)
  - #3978, Fix KNN when upgrading from 2.1 or older (Sandro Santilli)
  - #4017, lwgeom lexer memory corruption (Peter E)
  - #4055, ST_ClusterIntersecting dropping SRID (Daniel Baston)
  - #4093, Inconsistent results from qsort callback (yugr)


PostGIS 2.2.6
2017/10/18

 * Bug Fixes *
  - #3786, ptarray null and heap issues on is_closed
  - #3774, Trigonometric length for CompoundCurves
  - #3731, Crash on very small table of homogenous data
  - #2836, Receiving ERROR: ExteriorRing: geom is
           not a polygon with ST_ConcaveHull
  - #3866, Rare crash generating TWKB with large coordinate values
  - #3869, Fix build with "gold" linker
  - #3879, Division by zero in some arc cases
  - #3878, Single defn of signum in header
  - #3880, Undefined behaviour in TYPMOD_GET_SRID
  - #3875, Fix undefined behaviour in shift operation
  - #3874, lw_dist2d_pt_arc division by zero
  - #3882, undefined behaviour in zigzag with negative inputs
  - #3891, undefined behaviour in pointarray_to_encoded_polyline