@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e
 export SFCGAL_VER=1.3.2
-export GEOS_VER=3.6.2
+export GEOS_VER=3.7.0
 export GDAL_VER=2.2.4
 export PROJ_VER=4.9.3
 export SFCGAL_VER=1.3.2
